The program was initially terminated.